Updating pipeline: CopyPipeline_AE_LearningTasks Updating pipeline: PreProcessing_AESemesterReports Updating pipeline: Pre-Processing_with_filenames Adding pipeline: PreProcessing_AELearningTasks Adding dataflow: AE_LearningTasks_PreProcessing

--- a/pipeline/CopyPipeline_AE_LearningTasks.json
+++ b/pipeline/CopyPipeline_AE_LearningTasks.json
@@ -3,7 +3,7 @@
 	"properties": {
 		"activities": [
 			{
-				"name": "Copy_dui",
+				"name": "Copy AE_LearningTasks",
 				"type": "Copy",
 				"dependsOn": [],
 				"policy": {
@@ -45,7 +45,7 @@
 						"formatSettings": {
 							"type": "DelimitedTextWriteSettings",
 							"quoteAllText": true,
-							"fileExtension": ".txt"
+							"fileExtension": ".csv"
 						}
 					},
 					"enableStaging": false,
